[package]
name = "skyscanner"
version = "0.1.0"
edition = "2021"
authors = ["boris.lok <boris.lok.tw@outlook.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
config = "0.13.3"
futures = "0.3.27"
reqwest = { version = "0.11.14", features = ["json", "serde_json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
