[package]
name = "skyscanner"
version = "0.1.0"
edition = "2021"
authors = ["boris.lok <boris.lok.tw@outlook.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.24", features = ["serde"], default-features = false }
clap = { version = "4.2.7", features = ["derive"] }
config = "0.13.3"
futures = "0.3.28"
reqwest = { version = "0.11.17", features = ["json", "serde_json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
